# QtDMM

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  PKGBUILD  QtDMM.desktop  QtDMM.pro  QtDMM.spec  QtDMM.spec.in  README  README.md  compile.sh  deploy.cmake  qtdmm.1  qtdmm.spec
.github/: FUNDING.yml
.github/workflows/: cleanup.yml  cmake-mac-platform.yml  cmake-single-platform.yml  cmake-ubuntu-platform.yml  codeql.yml
assets/: astylerc  qtdmm.desktop  rfc2217_server.py
assets/appimage/: qtdmm.appdata.xml
assets/icons/: A_small.xpm  G.xpm  H.xpm  Hz_small.xpm  Ohm_small.xpm  W.xpm  add.xpm  auto.xpm  bar.xpm  buzzer.xpm  cm_small.xpm  conf.xpm  config.xpm  cosphi_small.xpm  dc.xpm  decimal.xpm  deg_small.xpm  degf.xpm  degf_small.xpm  diode.xpm  dmm.xpm  ee.xpm  execute.xpm  export.xpm  graph.xpm  hold.xpm  icon.xpm  icon_gray.xpm  import.xpm  instances.xpm  integration.xpm  integration_old.xpm  k_small.xpm  l_small.xpm  m.xpm  m_small.xpm  menu.xpm  minus_small.xpm  n_small.xpm  null_bar.xpm  (+12 more)
assets/translations/: qtdmm_de.ts
cmake/: ctest.cmake  git_version.cmake
src/: .dmm.cpp.swp  CMakeLists.txt  Doxyfile  Makefile  Resources.qrc  colorbutton.cpp  colorbutton.h  config.h  configdlg.cpp  configdlg.h  configitem.cpp  configitem.h  displayprefs.cpp  displayprefs.h  displaywid.cpp  displaywid.h  dmm.cpp  dmm.h  dmmbar.cpp  dmmbar.h  dmmdecoder.cpp  dmmdecoder.h  dmmdriver.cpp  dmmdriver.h  dmmgraph.cpp  dmmgraph.h  dmmprefs.cpp  dmmprefs.h  engnumbervalidator.cpp  engnumbervalidator.h  executeprefs.cpp  executeprefs.h  graphprefs.cpp  graphprefs.h  guiprefs.cpp  guiprefs.h  instancesdlg.cpp  instancesdlg.h  integrationprefs.cpp  integrationprefs.h  (+37 more)
src/decoders/: ascii.cpp  ascii.h  cyrustek_es51922.cpp  cyrustek_es51922.h  cyrustek_es51962.cpp  cyrustek_es51962.h  cyrustek_es51981.cpp  cyrustek_es51981.h  cyrustek_es51986.cpp  cyrustek_es51986.h  do3122.cpp  do3122.h  dtm0660.cpp  dtm0660.h  isotech.cpp  isotech.h  m9803r.cpp  m9803r.h  peaktech3315.cpp  qm1537.cpp  qm1537.h  rs22812.cpp  rs22812.h  vc820.cpp  vc820.h  vc870.cpp  vc870.h  vc940.cpp  vc940.h
src/drivers/: ascii.cpp  ascii.h  cyrustek_es51922.cpp  cyrustek_es51922.h  cyrustek_es51962.cpp  cyrustek_es51962.h  do3122.cpp  do3122.h  drivers.h  isotech.cpp  isotech.h  m9803r.cpp  m9803r.h  qm1537.cpp  qm1537.h  rs22812.cpp  rs22812.h  vc820.cpp  vc820.h  vc870.cpp  vc870.h  vc940.cpp  vc940.h
src/forms/: uiconfigdlg.ui  uidmmprefs.ui  uiexecuteprefs.ui  uigraphprefs.ui  uiguiprefs.ui  uiintegrationprefs.ui  uimainwid.ui  uimainwin.ui  uiprintdlg.ui  uirecorderprefs.ui  uiscaleprefs.ui  uitest.ui  uitipdlg.ui
src/icons/: connection.xpm  display.xpm  dmm.xpm  execute.xpm  graph.xpm  gui.xpm  integration.xpm  recorder.xpm  scale.xpm
src/portdevices/: hidserial.cpp  hidserial.h  rfc2217serial.cpp  rfc2217serial.h  serial.cpp  serial.h  sigrok.cpp  sigrok.h
src/sources/: Settings.cpp  Settings.h  colorbutton.cpp  colorbutton.h  config.h  configdlg.cpp  configdlg.h  configitem.cpp  configitem.h  displaywid.cpp  displaywid.h  dmm.cpp  dmm.h  dmmbar.cpp  dmmbar.h  dmmgraph.cpp  dmmgraph.h  dmmprefs.cpp  dmmprefs.h  engnumbervalidator.cpp  engnumbervalidator.h  executeprefs.cpp  executeprefs.h  graphprefs.cpp  graphprefs.h  guiprefs.cpp  guiprefs.h  integrationprefs.cpp  integrationprefs.h  main.cpp  mainwid.cpp  mainwid.h  mainwin.cpp  mainwin.h  prefwidget.cpp  prefwidget.h  printdlg.cpp  printdlg.h  qcleanuphandler.h  readerthread.cpp  (+12 more)
src/translations/: qtdmm_de.ts
src/ui/: uiconfigdlg.ui  uidmmprefs.ui  uiexecuteprefs.ui  uigraphprefs.ui  uiguiprefs.ui  uiinstancesdlg.ui  uiintegrationprefs.ui  uimainwin.ui  uiportsprefs.ui  uiprintdlg.ui  uirecorderprefs.ui  uitipdlg.ui
src/xpm/: A.xpm  DBM.xpm  DBM_small.xpm  F.xpm  F_small.xpm  G_small.xpm  H_small.xpm  Hz.xpm  Ohm.xpm  V.xpm  VA.xpm  VA_small.xpm  V_small.xpm  W_small.xpm  ac.xpm  all_digits.xpm  clear.xpm  cm.xpm  connect_icon.xpm  connect_off.xpm  connect_on.xpm  connection.xpm  cosphi.xpm  decimal_small.xpm  deg.xpm  display.xpm  dmm_big.xpm  fifty_bar.xpm  fourty_bar.xpm  gui.xpm  help.xpm  hi.xpm  k.xpm  l.xpm  manu.xpm  max_str.xpm  min_str.xpm  minus.xpm  n.xpm  null_bar.xpm  (+11 more)
tests/: rfc2217_injector.py  test_decoder.cpp
tests/data/: do3122.json_todo  dtm0660.json_todo  es51922.json  es51962.json  es51981.json  es51986.json  m9803r.json  qm1537.json  rs22812.json  vc820.json  vc870.json  vc940.json
tests/data/graph/: legacy.txt  legacy_nan.txt  new_dpoint.csv  new_komma_ms.csv  new_larger.csv
